<resources>
    <string name="app_name">wi20b055 - Homework 6</string>
    <string name="load_articles">Load articles</string>
    <string name="error_no_data">Error: No data</string>
    <string name="articles_loaded">Articles loaded</string>
    <string name="settings">Settings</string>

    <string name="settings_newsfeed_title">Newsfeed URL</string>
    <string name="settings_newsfeed_url_key">newsfeed_url</string>
    <string name="settings_newsfeed_url">https://www.engadget.com/rss.xml</string>

    <string name="settings_display_images_key">display_images</string>
    <string name="settings_display_images_title">Display Images</string>
    <string name="settings_display_images_summary_off">Images will not be displayed</string>
    <string name="settings_display_images_summary_on">Images will be displayed</string>

    <string name="settings_background_download_key">Download Images in the Background</string>
    <string name="settings_background_download_title">Download Images in the Background</string>
    <string name="settings_background_download_summary_off">Images will not be downloaded in the background</string>
    <string name="settings_background_download_summery_on">Images will be downloaded in the background</string>
    <string name="full_story">Full Story</string>
    <string name="reload">Reload</string>

</resources>